SERVER-36231 Mongos write path doesn't look for retryable write concern errors

(cherry picked from commit 9df4dbcffefe8f9cf2d669603f230c1f44ac5652)